[package]
name = "md-blog-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
markdown = "1.0.0-alpha.17"
log = "0.4"
env_logger = { version = "0.11.3", features = ["auto-color", "humantime"] }
serde = { version = "1.0", features = ["derive"] }
actix-web-actors = "4.1"
actix = "0.13.5"
serde_json = "1.0.125"
